# SG4

./: CMakeLists.txt  MudarPressao.mac  README.md  Simu.tar.xz  gamma.mac  main.cc  vis.mac
Análise/: 133.322Pa.txt  2500V.txt  266.644Pa.txt  2Fit  3000V.txt  5000V.txt  666.61Pa.txt  8500V.txt  9000V.txt  Fiit.cpp  Histo1D.cpp  Histo2D  Histo2D.cpp  comp.sh  hist1d
Gerador/: Gerador  Gerador.cpp  Macro.mac  comp.sh
include/: CampoEletrico.hh  Detector.hh  DetectorMens.hh  DetectorSensivel.hh  EventoAcao.hh  InicializadorAcao.hh  RunAcao.hh  TrackAcao.hh
source/: CampoEletrico.cc  Detector.cc  DetectorMens.cc  DetectorSensivel.cc  EventoAcao.cc  GeradorPrimarias.cc  InicializadorAcao.cc  RunAcao.cc
